# Ray-Marching

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: default.frag  lighting.glsl  maps.glsl  raymarching.glsl  render.glsl  signed_distance_functions.glsl  utility.glsl
include/: Application.hpp  Camera.hpp  Light.hpp  Shader.hpp  callbacks.hpp
include/maths/: Matrix4.hpp  transformations.hpp
include/mesh/: Mesh.hpp  meshes.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: default.frag  default.vert  lighting.glsl  maps.glsl  raymarching.glsl  signed_distance_functions.glsl  transformations.glsl
shaders/default/: default.frag  default.vert
shaders/raymarching/: default.frag  default.vert  lighting.glsl  maps.glsl  utility.glsl
src/: Application.cpp  Camera.cpp  Light.cpp  Shader.cpp  callbacks.cpp  main.cpp
src/maths/: Matrix4.cpp  transformations.cpp
src/mesh/: Mesh.cpp  meshes.cpp
